Adds images to README

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   <!-- <link rel="stylesheet" type="text/css" href="public/assets/css/reset.css"> -->
   <!-- <link rel="stylesheet" type="text/css" href="public/assets/css/style.css"> -->
 
-  <title>React App</title>
+  <title>Memory Game</title>
 </head>
 
 <body>
